Updated the license and readme, v2.0.0.0

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2.0.0.0 (2014-12-06)
+
+* Fork into Silver Feather. Rebranding, wiping old API keys.
+
 1.9.10.0 (2013-06-11)
 
 * Using version 1.1 of Twitter API. Everything should be working again.
