Sweep #7 and #9 under the rug for now

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,8 @@
+2.0.0.4 (2014-12-??)
+
+* Small layout fix for retweets
+* Added Twemoji support
+
 2.0.0.3 (2014-12-21)
 
 * Fixed line breaks in tweets
