Make twemoji optional (closes #20)

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -715,5 +715,8 @@
 	},
 	"ir_invalid_characters": {
 		"message": "Tweet contains invalid characters"
+	},
+	"l_render_emoji": {
+		"message": "Render emoji:"
 	}
 }
