--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,8 @@
-2.0.0.4 (2014-12-??)
+2.0.0.4 (2015-01-13)
 
 * Small layout fix for retweets
 * Added Twemoji support
+* Small layout fix for options page
 
 2.0.0.3 (2014-12-21)
 
