--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2.0 (2018-05-23)
+
+* Reborn! New Theme, allow 280 chats and loads images from pic.twitter.com 
+
 1.9.10.0 (2013-06-11)
 
 * Using version 1.1 of Twitter API. Everything should be working again.
@@ -37,7 +41,7 @@
 
 1.9.8.1 (2011-05-28)
 
-* So long, farewell, auf Wiedersehen, good bye Chromed Bird. Welcome Silver Bird. The extension has been renamed.
+* So long, farewell, auf Wiedersehen, good bye Chromed Bird. Welcome Steel Bird. The extension has been renamed.
 
 1.9.7.9 (2011-05-24)
 
