--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -1,6 +1,6 @@
 {
 	"extDescription": {
-		"message": "Silver Bird é uma extensão que integra o Chrome ao Twitter e permite que você acompanhe seus amigos e interaja com o seu Twitter.",
+		"message": "Steel Bird é uma extensão que integra o Chrome ao Twitter e permite que você acompanhe seus amigos e interaja com o seu Twitter.",
 		"description": "Descrição da extensão"
 	},
 	"resetSize": {
@@ -177,16 +177,16 @@
 		"message": "Requisição AJAX falhou (conexão ruim?)"
 	},
 	"successAuth": {
-		"message": "Parabés, você foi autenticado com sucesso. Aproveite o Silver Bird!"
+		"message": "Parabés, você foi autenticado com sucesso. Aproveite o Steel Bird!"
 	},
 	"cbAuthorized": {
-		"message": "Silver Bird autorizado!"
+		"message": "Steel Bird autorizado!"
 	},
 	"cbNotAuthorized": {
-		"message": "Ops... Tem algo errado. Por favor, tente clicar no ícone do Silver Bird novamente."
+		"message": "Ops... Tem algo errado. Por favor, tente clicar no ícone do Steel Bird novamente."
 	},
 	"authorizing": {
-		"message": "Por favor aguarde, autorizando o Silver Bird..."
+		"message": "Por favor aguarde, autorizando o Steel Bird..."
 	},
 	"yourPIN": {
 		"message": "Seu PIN é: $pin$",
@@ -302,7 +302,7 @@
 		"message": "Autorizar!"
 	},
 	"exceededAPIHits": {
-		"message": "Você excedeu o limite de chamadas à API do Twitter. Por favor reveja as suas configurações de intervalo de atualização na <a href='#' class=\"msg-trigger-openoptions\">página de opções</a>. O Silver Bird não irá atualizar até $nextResetDate $nextResetTime$.",
+		"message": "Você excedeu o limite de chamadas à API do Twitter. Por favor reveja as suas configurações de intervalo de atualização na <a href='#' class=\"msg-trigger-openoptions\">página de opções</a>. O Steel Bird não irá atualizar até $nextResetDate $nextResetTime$.",
 		"placeholders": {
 			"options_url": {
 				"content": "$1"
@@ -397,7 +397,7 @@
 		"message": "anos atrás"
 	},
 	"options_title": {
-		"message": "Opções do Silver Bird"
+		"message": "Opções do Steel Bird"
 	},
 	"conf_saved": {
 		"message": "A configuração foi salva com sucesso!"
@@ -553,7 +553,7 @@
 		"message": "Timelines"
 	},
 	"notice_api_hits": {
-		"message": "Você deverá deixar o número de chamadas ao Twitter <span style=\"color: red;\">abaixo de <span class=\"__hourly_limit\"></span></span>! Caso contrário o Silver Bird irá parar de funcionar corretamente e as timelines não irão mais atualizar.<br><span style=\"color: red;\">Lembre-se</span> de que se você está utilizando múltiplos clientes para o Twitter você deverá deixar o número de chamadas ainda menor."
+		"message": "Você deverá deixar o número de chamadas ao Twitter <span style=\"color: red;\">abaixo de <span class=\"__hourly_limit\"></span></span>! Caso contrário o Steel Bird irá parar de funcionar corretamente e as timelines não irão mais atualizar.<br><span style=\"color: red;\">Lembre-se</span> de que se você está utilizando múltiplos clientes para o Twitter você deverá deixar o número de chamadas ainda menor."
 	},
 	"l_hits_notice": {
 		"message": "Chamadas ao Twitter por hora: "
