--- a/_locales/az/messages.json
+++ b/_locales/az/messages.json
@@ -1,6 +1,6 @@
 ﻿{
   "extDescription": {
-    "message": "Silver Bird, Twitter hesabınızı Google Chrome üzərindən izləmənizi və idarə etmənizi təmin edən bir əlavədir.",
+    "message": "Steel Bird, Twitter hesabınızı Google Chrome üzərindən izləmənizi və idarə etmənizi təmin edən bir əlavədir.",
     "description": "Extension description"
   },
   "resetSize": {
@@ -182,13 +182,13 @@
     "message": "AJAX istəyi uğursuzdur (pis əlaqə?)"
   },
   "successAuth": {
-    "message": "Təbriklər, siz uğurla hesabınızı təsdiq etdiniz. Silver Birddən zövq alın!"
+    "message": "Təbriklər, siz uğurla hesabınızı təsdiq etdiniz. Steel Birddən zövq alın!"
   },
   "cbAuthorized": {
-    "message": "Silver Bird icazə verdi!"
+    "message": "Steel Bird icazə verdi!"
   },
   "cbNotAuthorized": {
-    "message": "Nəsə istənilən kimi getmədi. Lütfən Silver Bird ikonuna təkrar basın."
+    "message": "Nəsə istənilən kimi getmədi. Lütfən Steel Bird ikonuna təkrar basın."
   },
   "authorizing": {
     "message": "Lütfən gözləyin..."
@@ -307,7 +307,7 @@
     "message": "Səlahiyyət ver!"
   },
   "exceededAPIHits": {
-    "message": "Gündəlik API istifadə limitini keçdiniz. Lütfən <a href='#' class=\"msg-trigger-openoptions\">seçimlər səhifəsindən</a> yeniləmə aralığını yoxlayın. Silver Bird $nextResetDate $nextResetTime$ tarixinə qədər yenilənməyəcək.",
+    "message": "Gündəlik API istifadə limitini keçdiniz. Lütfən <a href='#' class=\"msg-trigger-openoptions\">seçimlər səhifəsindən</a> yeniləmə aralığını yoxlayın. Steel Bird $nextResetDate $nextResetTime$ tarixinə qədər yenilənməyəcək.",
     "placeholders": {
       "options_url": {
         "content": "$1"
@@ -402,7 +402,7 @@
     "message": "il əvvəl"
   },
   "options_title": {
-    "message": "Silver Bird Ayarları"
+    "message": "Steel Bird Ayarları"
   },
   "conf_saved": {
     "message": "Ayarlarınız uğurla qeyd edildi."
